--- a/application/templates/post.html
+++ b/application/templates/post.html
@@ -5,15 +5,44 @@
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ url_for('static', filename='pictures/' + post.author.image_file) }}">
         <div class="media-body">
+            
             <div class="article-metadata">
                 <a class="mr-2" href="#">{{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
-                </div>
-                <br />
-                <h2 class="article-title">{{ title }}</h2>
-                <p class="article-content">{{ post.content }}</p>
+                
+            </div>
+            
+            <br />
+            <h2 class="article-title">{{ title }}</h2>
+            <p class="article-content">{{ post.content }}</p>
+            {% if post.author == current_user %}
+                <a class="btn btn-secondary btn-sm m-1" href="{{ url_for('update_post', post_id=post.id) }}">Update</a>
+                <button type='button' class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
+            {% endif %}
         </div>
     </article>
+    <!-- Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteModalLabel">Delete this post?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <!-- <div class="modal-body">
+              Are you sure that you want to delete this post?
+            </div> -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <form action="{{ url_for('delete_post', post_id=post.id) }}" method='POST'>
+                  <input class="btn btn-danger" type="submit" value="Delete">
+              </form>
+            </div>
+          </div>
+        </div>
+    </div>
 
 <a href="{{ url_for('about') }}">Go Back</a>
 {% endblock %}
