--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -7,5 +7,5 @@
 
 {% block body%}
 <p>Hey this is a project example of Flusk application I am working on</p>
-<a href="{{ url_for('home') }}">Go Back</a>
+<a href="{{ url_for('main.home') }}">Go Back</a>
 {% endblock %}
