--- a/application/templates/post.html
+++ b/application/templates/post.html
@@ -16,7 +16,7 @@
             <h2 class="article-title">{{ title }}</h2>
             <p class="article-content">{{ post.content }}</p>
             {% if post.author == current_user %}
-                <a class="btn btn-secondary btn-sm m-1" href="{{ url_for('update_post', post_id=post.id) }}">Update</a>
+                <a class="btn btn-secondary btn-sm m-1" href="{{ url_for('posts.update_post', post_id=post.id) }}">Update</a>
                 <button type='button' class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
             {% endif %}
         </div>
@@ -36,7 +36,7 @@
             </div> -->
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <form action="{{ url_for('delete_post', post_id=post.id) }}" method='POST'>
+              <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method='POST'>
                   <input class="btn btn-danger" type="submit" value="Delete">
               </form>
             </div>
@@ -44,5 +44,5 @@
         </div>
     </div>
 
-<a href="{{ url_for('about') }}">Go Back</a>
+<a href="{{ url_for('main.about') }}">Go Back</a>
 {% endblock %}
